--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,14 @@ services:
     restart: unless-stopped
     labels:
       - traefik.enable=true
-      - traefik.docker.network=traefik_proxy
+      - traefik.docker.network=proxy
       - traefik.http.routers.user-dashboard.rule=Host(`dashboard.mosello.net.br`)
       - traefik.http.routers.user-dashboard.entrypoints=web,websecure
       - traefik.http.routers.user-dashboard.tls=true
       - traefik.http.services.user-dashboard.loadbalancer.server.port=80
     networks:
-      - traefik_proxy
+      - proxy
 
 networks:
-  traefik_proxy:
+  proxy:
     external: true
