--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - traefik.http.routers.user-dashboard.rule=Host(`dashboard.mosello.net.br`)
       - traefik.http.routers.user-dashboard.entrypoints=web,websecure
       - traefik.http.routers.user-dashboard.tls=true
+      - traefik.http.routers.user-dashboard.tls.certresolver=le
       - traefik.http.services.user-dashboard.loadbalancer.server.port=80
     networks:
       - proxy
