--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node server.js",
+    "dev:server": "node --watch server.js",
+    "start": "npm run build && npm run server"
   },
   "dependencies": {
     "react-dom": "^19.2.1",
     "recharts": "^3.5.1",
-    "react": "^19.2.1"
+    "react": "^19.2.1",
+    "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
