--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,9 +27,11 @@ services:
       - traefik.enable=true
       - traefik.docker.network=proxy
       - traefik.http.routers.dashboard.rule=Host(`dashboard.mosello.net.br`)
-      - traefik.http.routers.dashboard.entrypoints=web,websecure
-      - traefik.http.routers.dashboard.tls=true
-      - traefik.http.routers.dashboard.tls.certresolver=le
+      - traefik.http.routers.dashboard.entrypoints=web
+      - traefik.http.routers.dashboard-secure.rule=Host(`dashboard.mosello.net.br`)
+      - traefik.http.routers.dashboard-secure.entrypoints=websecure
+      - traefik.http.routers.dashboard-secure.tls=true
+      - traefik.http.routers.dashboard-secure.tls.certresolver=le
       - traefik.http.services.dashboard.loadbalancer.server.port=3001
     networks:
       - proxy
