--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,11 @@
-DB_HOST=84.46.246.201
-DB_PORT=5433
-DB_NAME=checkin
-DB_USER=admin
-DB_PASSWORD=
-PORT=3001
-NODE_ENV=production
+# Database Configuration
+MOSELLO_PG_ADMIN_PASSWORD=sua_senha_do_postgres_aqui
+
+# API Keys
+GEMINI_API_KEY=sua_chave_api_gemini_aqui
+
+# Database Connection Details (for reference)
+# Host: host.docker.internal (dentro do container)
+# Port: 5433
+# Database: checkin
+# User: admin
