--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,41 @@
-version: "3.8"
+version: '3.8'
 
 services:
   dashboard:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     container_name: mosello-dashboard
     restart: unless-stopped
-    ports:
-      - "3001:3001"
+    networks:
+      - proxy
     environment:
-      - DB_HOST=84.46.246.201
+      # Database connection
+      - DB_HOST=host.docker.internal
       - DB_PORT=5433
       - DB_NAME=checkin
       - DB_USER=admin
-      - DB_PASSWORD=${DB_PASSWORD:-}
-      - PORT=3001
-      - NODE_ENV=production
+      - DB_PASSWORD=${MOSELLO_PG_ADMIN_PASSWORD}
+      # API Keys
+      - GEMINI_API_KEY=${GEMINI_API_KEY}
+    labels:
+      # Traefik configuration
+      - "traefik.enable=true"
+      - "traefik.http.routers.dashboard.rule=Host(`dashboard.mosello.net.br`)"
+      - "traefik.http.routers.dashboard.entrypoints=websecure"
+      - "traefik.http.routers.dashboard.tls=true"
+      - "traefik.http.routers.dashboard.tls.certresolver=letsencrypt"
+      - "traefik.http.services.dashboard.loadbalancer.server.port=80"
+      # Optional: Redirect HTTP to HTTPS
+      - "traefik.http.middlewares.dashboard-redirect.redirectscheme.scheme=https"
+      - "traefik.http.middlewares.dashboard-redirect.redirectscheme.permanent=true"
+      - "traefik.http.routers.dashboard-http.rule=Host(`dashboard.mosello.net.br`)"
+      - "traefik.http.routers.dashboard-http.entrypoints=web"
+      - "traefik.http.routers.dashboard-http.middlewares=dashboard-redirect"
     healthcheck:
-      test: ["CMD", "node", "-e", "require('http').get('http://localhost:3001/api/test-connection', (r) => {if (r.statusCode !== 200) throw new Error(r.statusCode)})"]
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/"]
       interval: 30s
       timeout: 3s
       retries: 3
-      start_period: 5s
-    labels:
-      - traefik.enable=true
-      - traefik.docker.network=proxy
-      - traefik.http.routers.dashboard.rule=Host(`dashboard.mosello.net.br`) || PathPrefix(`/api/`)
-      - traefik.http.routers.dashboard.entrypoints=web
-      - traefik.http.routers.dashboard.service=dashboard
-      - traefik.http.services.dashboard.loadbalancer.server.port=3001
-    networks:
-      - proxy
+      start_period: 10s
 
 networks:
   proxy:
