--- a/package.json
+++ b/package.json
@@ -1,24 +1,17 @@
 {
   "name": "mosello-advocacia---painel-de-check-in",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "server": "node server.js",
-    "dev:server": "node --watch server.js",
-    "start": "node server.js"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react-dom": "^19.2.1",
     "recharts": "^3.5.1",
-    "react": "^19.2.1",
-    "express": "^4.18.2",
-    "pg": "^8.11.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "react": "^19.2.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
