--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,10 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Error log
+    error_log /var/log/nginx/error.log debug;
+    access_log /var/log/nginx/access.log;
+
     # Gzip compression
     gzip on;
     gzip_vary on;
