--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,42 @@ services:
     container_name: user-dashboard
     restart: unless-stopped
     labels:
-      - traefik.enable=true
-      - traefik.docker.network=proxy
-      - traefik.http.routers.user-dashboard.rule=Host(`dashboard.mosello.net.br`)
-      - traefik.http.routers.user-dashboard.entrypoints=web,websecure
-      - traefik.http.routers.user-dashboard.tls=true
-      - traefik.http.routers.user-dashboard.tls.certresolver=le
-      - traefik.http.services.user-dashboard.loadbalancer.server.port=80
+      - "traefik.enable=true"
+      - "traefik.docker.network=proxy"
+      - "traefik.http.routers.user-dashboard.rule=Host(`dashboard.mosello.net.br`)"
+      - "traefik.http.routers.user-dashboard.entrypoints=web,websecure"
+      - "traefik.http.routers.user-dashboard.tls=true"
+      - "traefik.http.routers.user-dashboard.tls.certresolver=le"
+      - "traefik.http.services.user-dashboard.loadbalancer.server.port=80"
+    networks:
+      - proxy
+
+  api-server:
+    build:
+      context: ./server
+      dockerfile: Dockerfile
+    container_name: api-server
+    restart: unless-stopped
+    environment:
+      - MOSELLO_PG_ADMIN_PASSWORD=${MOSELLO_PG_ADMIN_PASSWORD}
+      # As variáveis abaixo são para o caso de você precisar sobrescrever os padrões no index.js
+      # - PG_HOST=host.docker.internal
+      # - PG_PORT=5433
+      # - PG_DATABASE=checkin
+      # - PG_USER=admin
+    labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=proxy"
+      # Roteador para a API, usando um path específico
+      - "traefik.http.routers.api-server.rule=Host(`dashboard.mosello.net.br`) && PathPrefix(`/api`)"
+      - "traefik.http.routers.api-server.entrypoints=web,websecure"
+      - "traefik.http.routers.api-server.tls=true"
+      - "traefik.http.routers.api-server.tls.certresolver=le"
+      # Middleware para remover o /api antes de enviar para o container
+      - "traefik.http.middlewares.api-stripprefix.stripprefix.prefixes=/api"
+      - "traefik.http.routers.api-server.middlewares=api-stripprefix"
+      # Serviço da API
+      - "traefik.http.services.api-server.loadbalancer.server.port=3001"
     networks:
       - proxy
 
