--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
       dockerfile: Dockerfile
     container_name: api-server
     restart: unless-stopped
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     environment:
       - MOSELLO_PG_ADMIN_PASSWORD=${MOSELLO_PG_ADMIN_PASSWORD}
       # As variáveis abaixo são para o caso de você precisar sobrescrever os padrões no index.js
